--- a/css_from_web_page.css
+++ b/css_from_web_page.css
@@ -3,51 +3,155 @@
     padding: 0px;
 }
 
-header{
+.body1 {
+    margin-right: 15%;
+    margin-left: 15%;
+}
+
+section {
+    color: gray;
+}
+
+header {
     background-position: center;
     background-size: cover;
     background-image: url("Dahlias-flower.jpg");
     background-repeat: no-repeat;
-    
-}    
-.links{
+}
+
+.links {
     background: rgba(255, 255, 255, 0.8);
     text-align: right;
     padding: 20px;
 }
-.links a{
+
+.links a {
     display: inline-block;
     margin: auto;
     padding: 5px 10px;
     color: gray;
 }
-#login{
+
+#login {
     color: white;
     background-position: center;
-    background-color: red;
-    height: 15px;
+    background-color: rgb(204, 92, 92);
+    height: 14px;
+    text-align: center;
+    border-radius: 3px;
     width: 40px;
+    display: inline-block;
 }
-.well{
+
+.place0 {
+    width: 90px;
+    height: 20px;
+    display: inline-block;
+}
+
+.place1 {
+    height: 30px;
+    display: inline-block;
+}
+
+.well {
     user-zoom: 100px;
     text-align: center;
 }
-.welcome{
+
+.place {
+    height: 200px;
+}
+
+.lorem {
+    margin-top: 30px;
+    text-align: center;
+    margin-right: 50px;
+    margin-left: 50px;
+}
+
+.welcome {
     text-align: center;
     color: white;
     font-size: 30px;
 }
-.multipurpose{
+
+.multipurpose {
     text-align: center;
     color: white;
     height: 70px;
 }
-section{
-    color: gray;
-}
-.introduction{
+
+.introduction {
     text-align: center;
+    margin-right: 100px;
+    margin-left: 100px;
 }
-.line{
-    width: auto;
+
+.top1 {
+    margin-bottom: 13px;
+}
+
+.object {
+    width: 100%;
+    display: flex;
+}
+
+.object1 {
+    scale: auto;
+    margin-top: 40px;
+    margin-bottom: 30px;
+    width: 25%;
+}
+
+.introduct {
+    margin-right: 95px;
+    margin-left: 95px;
+    display: flex;
+    margin-top: 10px;
+    margin-bottom: 70px;
+}
+
+.top {
+    margin-bottom: 10px;
+}
+
+.paragraph {
+    text-align: justify;
+    display: inline-block;
+}
+
+.img2 {
+    margin-right: 20px;
+}
+
+footer {
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(37, 40, 37);
+    color: rgb(156, 154, 154);
+}
+.fl{
+    margin-top: 30px;
+    margin-bottom: 50px;
+    background-color: rgb(8, 194, 8);
+    margin-right: 19%;
+    margin-left: 19%;
+}
+.foot {
+    background-color: rgb(38, 90, 38);
+    display: flex;
+    width: max-content;
+    flex-direction: column;
+    
+}
+.topic1 {
+
+    
+}
+
+@media (max-device-width:820px) {
+    .object1 {
+        width: 100px;
+    }
 }
