--- a/css_from_web_page.css
+++ b/css_from_web_page.css
@@ -127,31 +127,27 @@ header {
 
 footer {
     display: flex;
-    justify-content: space-between;
     background-color: rgb(37, 40, 37);
-    color: rgb(156, 154, 154);
+    color: rgb(184, 184, 184);
 }
-.fl{
+
+.foot {
     margin-top: 30px;
     margin-bottom: 50px;
-    background-color: rgb(8, 194, 8);
     margin-right: 19%;
     margin-left: 19%;
-}
-.foot {
-    background-color: rgb(38, 90, 38);
-    display: flex;
-    width: max-content;
-    flex-direction: column;
-    
-}
-.topic1 {
-
-    
+    width: 100%;
+    display: inline-flex;
 }
 
-@media (max-device-width:820px) {
-    .object1 {
-        width: 100px;
-    }
+.topic1{
+    float: left;
+    width: 25%;
+}
+
+.topic{
+    margin-bottom: 12px;
+}
+.fin{
+    
 }
